# find-image-hashing

./: .dockerignore  .gitignore  Dockerfile  FINd_fixed.py  FINd_optimized.py  LICENSE  README.md  baseline_summary.json  findExample.ipynb  profile_script.py  pyproject.toml  requirements-api.txt  requirements.txt
api/: __main__.py  main.py  schemas.py
notebooks/: accuracy_benchmark.ipynb  compare_versions.ipynb  demo.ipynb  findExample.ipynb  profile.ipynb  run_subset.ipynb
src/: plots.py  sampling.py  timing.py
src/find_image_hashing/: __init__.py  fixed.py  reference.py
summaries/: accuracy_pairs.csv  accuracy_summary.json  adversarial_summary.json  fixed_summary.json  optimized_summary.json  optimized_summary_run1.json  original_summary.json
tests/: benchmark_api.py  build_fixtures.py  conftest.py  test_api.py  test_bulk_equivalence.py  test_fixed_equivalence.py  test_hash_stable.py  test_optimized_equivalence.py
tests/fixtures/: known_hashes.json  known_hashes_fixed.json
